DB Connection, Migrations e cadastro de categoria

--- a/EstoqueAPP/EstoqueAPP.csproj
+++ b/EstoqueAPP/EstoqueAPP.csproj
@@ -35,4 +35,14 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DB\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="estoque.db">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
