--- a/EstoqueAPP/EstoqueAPP.csproj
+++ b/EstoqueAPP/EstoqueAPP.csproj
@@ -41,7 +41,7 @@
 
   <ItemGroup>
     <None Update="estoque.db">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
